Fix text alignment

--- a/client/src/views/content_management/_contentManagement.scss
+++ b/client/src/views/content_management/_contentManagement.scss
@@ -1,3 +1,3 @@
-// #contentManagement {
-  
-// }
+#contentManagement {
+  text-align: center;
+}
